# dotty-mcp

./: README.md  pyproject.toml
src/dotty_mcp/: __init__.py  main.py
